// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@kaartje2go/temp-dullahan AdapterError should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan AssertionError should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan DullahanAdapter should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan DullahanAdapterDefaultOptions should remain the same 1`] = `
Object {
  "debug": true,
  "headless": false,
}
`;

exports[`@kaartje2go/temp-dullahan DullahanApi should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan DullahanError should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan DullahanErrorMessage should remain the same 1`] = `
Object {
  "ACTIVE_BROWSER": "Browser has already been opened!",
  "NO_BROWSER": "Browser has been closed, or has not yet been opened!",
  "NO_ELEMENT": [Function],
}
`;

exports[`@kaartje2go/temp-dullahan DullahanPlugin should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan DullahanRunner should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan DullahanTest should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan attempt should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan cli should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan displayPointer should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan emitFakeEvent should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan findElement should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan getBoundingClientRect should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan getElementAttributes should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan getElementProperties should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan getElementStyles should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan isDullahanConfig should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan normalizeConfigEntry should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan requireDependency should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan scrollToElement should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan sleep should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan waitForReadyState should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-adapter-playwright DullahanAdapterPlaywrightDefaultOptions should remain the same 1`] = `
Object {
  "browserName": "chromium",
  "debug": true,
  "headless": false,
}
`;

exports[`@kaartje2go/temp-dullahan-adapter-playwright default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-adapter-puppeteer DullahanAdapterPuppeteerDefaultOptions should remain the same 1`] = `
Object {
  "browserName": "chrome",
  "debug": true,
  "headless": false,
}
`;

exports[`@kaartje2go/temp-dullahan-adapter-puppeteer default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-adapter-selenium-3 DullahanAdapterSelenium3DefaultOptions should remain the same 1`] = `
Object {
  "browserName": "chrome",
  "debug": true,
  "headless": false,
}
`;

exports[`@kaartje2go/temp-dullahan-adapter-selenium-3 default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-adapter-selenium-4 DullahanAdapterSelenium4DefaultOptions should remain the same 1`] = `
Object {
  "browserName": "chrome",
  "debug": true,
  "headless": false,
}
`;

exports[`@kaartje2go/temp-dullahan-adapter-selenium-4 default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-aws-s3 default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-browserstack default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-github default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-gitlab default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-report-html default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-report-markdown default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-slack default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-plugin-xvfb default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-runner-aws-lambda default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-runner-development default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-runner-parallel default should remain the same 1`] = `[Function]`;

exports[`@kaartje2go/temp-dullahan-runner-synchronous default should remain the same 1`] = `[Function]`;
